--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
-<html></html> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    
+</body>
+</html>
 <title>document</title>
 <body>
     <marquee behavior="" direction="right"><h1>You are invited to my birthday party!!!</h1></marquee>
     <h2>We will have a lot of fun, and eat a delicious cake :)!</h2>
-    <p><b>These are all the things taht we will do:</b></p>
+    <p><b>These are all the things that we will do:</b></p>
     <img src="" alt="">
     <div>
         <ul>
@@ -23,7 +34,7 @@
                  <p> And I also hope you dont have anything other to do so you can come!</p>
                  <p> Byeee, Thank you :)!!!!!!!!!! </p>
  
-
+    <img src="cake.jpg" alt="" class="cake-image">
         </ul>
     </div>
 </body>
