--- a/index.html
+++ b/index.html
@@ -4,22 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-</body>
-</html>
-<title>document</title>
-<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+
     <marquee behavior="" direction="right"><h1>You are invited to my birthday party!!!</h1></marquee>
     <h2>We will have a lot of fun, and eat a delicious cake :)!</h2>
     <p><b>These are all the things that we will do:</b></p>
     <img src="" alt="">
     <div>
         <ul>
-            <li>I will pick you up after schoola t 4:15 PM and we will go to Venice.</li>
-            <li>After 30 minutes, we will arrive in Vrnice and will go on a water taxi to swim around Venice.</li>
+            <li>I will pick you up after schoola at 4:15 PM and we will go to Venice.</li>
+            <li>After 30 minutes, we will arrive in Venice and will go on a water taxi to swim around Venice.</li>
             <li>After the ride on the water taxi, we will finally go to a restaurant named Old Wild West.</li>
             <li>We then will eat and have a lot of fun!</li>
             <li>After we are done eating dinner, we will eat the delicious cake made out of:</li>
@@ -28,14 +61,22 @@
             <li>And other delicious stuff (EATABLE!!!!!)</li>
             <li>All of the girls invited will stay after everyone will go away.</li>
             <li>We will ahve a big pigiamaparty at my place, we will be in 6!!!!!!!!!!</li>
-            <li>After we sleep, (which I hope we dont...), we will wake up early and your parents will pico you up.</li>
+            <li>After we sleep, (which I hope we dont...), we will wake up early and your parents will pick you up.</li>
             <p>I would really like for you to come to my party.</p> 
                 I promise you that we will have a lot of fun this day :)!
                  <p> And I also hope you dont have anything other to do so you can come!</p>
                  <p> Byeee, Thank you :)!!!!!!!!!! </p>
+                </div>
+                 
+                 …………………………………………………………………………………………………………………………………………………………………………………………………………………………………………………………………………………………
+
  
-    <img src="cake.jpg" alt="" class="cake-image">
+   
+                 <img src="cake.jpg" alt="" class="cake-image">
+                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         </ul>
-    </div>
-</body>
+   
+
+</head>
+<body>
 
