I did my final pages.

--- a/cakes.html
+++ b/cakes.html
@@ -50,8 +50,28 @@
           </div>
         </div>
       </nav>
+
+      <a href="index.html">Homepage</a>
+      <a href="cakes.html">Cakes</a>
+      <a href="invitedpeople.html">Invited People</a>
+      <a href="pjparty.html">Pj party</a>
+
 <h1>Here are some of the cakes that we will eat!</h1>
 <h2>These are just some inspirations! Not the real cakes that we will eat!</h2>
+<img src="margherite.jpg" alt="" class="cake-image">
+
+<img src="yellow.webp" alt="" class="cake-image">
+
+<img src="chocolate.jpg" alt="" class="cake-image">
+
+<img src="pinkshmall.JPG" alt="" class="cake-image">
+
+<img src="pinkbig.jpg" alt="" class="cake-image">
+
+<img src="xico.webp" alt="" class="cake-image">
+
+
+
 <body>
     
 </body>
