--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-  
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -46,7 +46,14 @@
         </div>
       </nav>
 
-    <marquee behavior="" direction="right"><h1>You are invited to my birthday party!!!</h1></marquee>
+<a href="index.html">Homepage</a>
+  <a href="cakes.html">Cakes</a>
+  <a href="invitedpeople.html">Invited People</a>
+  <a href="pjparty.html">Pj party</a>
+
+
+
+      <marquee behavior="" direction="right"><h1>You are invited to my birthday party!!!</h1></marquee>
     <p>•••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••</p>
     <h2>We will have a lot of fun, and eat a delicious cake :)!</h2>
     <p><b>These are all the things that we will do:</b></p>
